fixed but with new enum param handling